# wgpu-learning

./: Cargo.toml  README.md
src/: main.rs  shader.wgsl  state.rs  vertex.rs
src/shape/: mod.rs  quad.rs  triangle.rs
