[package]
name = "wgpu-learning"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
image = "0.23.14"
winit = "0.26.0"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.11.1"
pollster = "0.2"
bytemuck = { version = "1.4", features = ["derive"] }